// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle renders correctly 1`] = `
<div
  className="circle-picker "
  style={
    {
      "display": "flex",
      "flexWrap": "wrap",
      "marginBottom": -14,
      "marginRight": -14,
      "width": 252,
    }
  }
>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #f44336",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#f44336"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #e91e63",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#e91e63"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #9c27b0",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#9c27b0"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #673ab7",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#673ab7"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #3f51b5",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#3f51b5"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #2196f3",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#2196f3"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #03a9f4",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#03a9f4"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #00bcd4",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#00bcd4"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #009688",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#009688"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #4caf50",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#4caf50"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #8bc34a",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#8bc34a"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #cddc39",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#cddc39"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #ffeb3b",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ffeb3b"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #ffc107",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ffc107"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #ff9800",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ff9800"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #ff5722",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#ff5722"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #795548",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#795548"
        />
      </span>
    </div>
  </div>
  <div
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        {
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            {
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #607d8b",
              "cursor": "pointer",
              "height": "100%",
              "outline": "none",
              "position": "relative",
              "transform": undefined,
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#607d8b"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`CircleSwatch renders correctly 1`] = `
<div
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    style={
      {
        "height": 28,
        "marginBottom": 14,
        "marginRight": 14,
        "transform": "scale(1)",
        "transition": "100ms transform ease",
        "width": 28,
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "transparent",
            "borderRadius": "50%",
            "boxShadow": "inset 0 0 0 15px undefined",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "transform": undefined,
            "transition": "100ms box-shadow ease",
            "width": "100%",
          }
        }
        tabIndex={0}
      />
    </span>
  </div>
</div>
`;

exports[`CircleSwatch renders with sizing and spacing 1`] = `
<div
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    style={
      {
        "height": 40,
        "marginBottom": 40,
        "marginRight": 40,
        "transform": "scale(1)",
        "transition": "100ms transform ease",
        "width": 40,
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          {
            "background": "transparent",
            "borderRadius": "50%",
            "boxShadow": "inset 0 0 0 21px undefined",
            "cursor": "pointer",
            "height": "100%",
            "outline": "none",
            "position": "relative",
            "transform": undefined,
            "transition": "100ms box-shadow ease",
            "width": "100%",
          }
        }
        tabIndex={0}
      />
    </span>
  </div>
</div>
`;
